[tool.poetry]
name = "flashes"
version = "0.1.0"
description = ""
authors = ["Eric Souza <ericsouza0801@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
redis = "^4.6.0"
pydantic-settings = "^2.0.1"
shortuuid = "^1.0.11"
orjson = "^3.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
